cmake_minimum_required(VERSION 3.10)
project(sdl_raytracing)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(SDL2 REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
include_directories(${SDL2_INCLUDE_DIRS})
include_directories("./src/")
add_executable(sdl_raytracing "src/main.cpp")
target_include_directories(sdl_raytracing PRIVATE "./src/" "/usr/include/SDL2/")
target_link_libraries(sdl_raytracing ${SDL2_LIBRARIES})
